# FLEX

./: README.md  critic.py  icl.py  memory_retriever.py  pyproject.toml  rate_limiter.py  reject_sampling.py  test_aime.py  test_flex.py  test_retro.py  updater.py  utils.py
data/AIME/: test.jsonl  train.jsonl
data/uspto50k/: test.jsonl  train.jsonl
docs/: memory_retriever_design.md
exps/: aime_claude.json  aime_deepseek.json  aime_mixed.json  retro_claude.json  retro_gemini.json  retro_gpt.json
prompts/: actor_aime.yaml  actor_retro.yaml  llm_system_prompt.txt  llm_system_prompt_retro.txt  memory.yaml  memory_aime.yaml  memory_retro.yaml  verifier.txt  verifier_retro.txt
utils/: retest_accuracy.py  test_api_connection.py
